[package]
name = "flaky_test"
version = "0.1.0"
authors = ["the Deno authors"]
edition = "2018"
license = "MIT"
repository = "https://github.com/denoland/flaky_test"
description = "atttribute macro for running a flaky test multiple times"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
