[package]
name = "flaky_test"
version = "0.1.0"
authors = ["the Deno authors"]
edition = "2018"
license = "MIT"
repository = "https://github.com/denoland/flaky_test"
description = "atttribute macro for running a flaky test multiple times"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["rt", "macros"], optional = true }
futures-util = { version = "0.3", features = ["std"], optional = true }

[features]
tokio = ["dep:tokio", "dep:futures-util"]
