[package]
name = "flaky_test"
version = "0.2.0"
authors = ["the Deno authors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/denoland/flaky_test"
description = "atttribute macro for running a flaky test multiple times"

[workspace]
members = ["impl"]

[dependencies]
flaky_test_impl = { path = "impl" }
futures-util = { version = "0.3", default-features = false, features = ["std"] }

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread", "macros"] }
